Implement events II - Implemented event calling - fix mutes not working properly with the paper-extension This closes #12.